Add Check Style (#76)
* Add Check Style

* Add Check Style

* Fix check style